[package]
name = "tarpc-ws"
version = "0.1.0"
edition = "2021"
authors = [
    "Li Datu",
]
license = "MIT"
keywords = ["rpc", "network", "server", "api"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tarpc = "0.34.0"
pin-project = "1.0"
bitcode = { version = "0.6", features = ["serde"]}
ws_stream_wasm = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
bytes = { version = "1.6", features = ["serde"] }
futures-core = "0.3"

[features]
wasm = ["ws_stream_wasm"]
